--- a/index.html
+++ b/index.html
@@ -5,55 +5,19 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <!-- AdSIST Tool -->
-<!-- Global site tag (gtag.js) - Google Ads: AW-11044747514 -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-11044747514"></script>
+
+  <!-- Buzzify Tool -->
+<!-- Global site tag (gtag.js) - Google Ads: AW-16606578379 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16606578379"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    
-    gtag('config', 'AW-11044747514');
-</script><!-- Event snippet for conversion page -->
-<script type="text/javascript">
-    gtag('event', 'conversion', {
-        'send_to': 'AW-11044747514/PTNYCPytjIUYEPrxxZIp',
-        'value': <{$order_price}>,
-        'currency': 'JPY',
-        'transaction_id': '<{$order_products_id}>'
-    });
+
+    gtag('config', 'AW-16606578379');
 </script>
-<!-- AdSIST Tool End -->
-  <!-- AdSIST Tool -->
-<!-- Global site tag (gtag.js) - Google Ads: AW-11044747514 -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-11044747514"></script>
-<script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    
-    gtag('config', 'AW-11044747514');
-</script><script type="text/javascript">
-    window.addEventListener('load', function() {
-        const colorme = Colorme;
-        switch (colorme.page) {
-            case 'product':
-                gtag('event', 'page_view', {
-                    'send_to': 'AW-11044747514',
-                    'value': colorme.product.sales_price,
-                    'items': [{
-                        'id': colorme.product.id.toString(),
-                        'google_business_vertical': 'retail'
-                    }],
-                    'ecomm_pagetype': 'product',
-                    'ecomm_prodid': colorme.product.id,
-                });
-                break;
-            default:
-                break;
-        }
-     }, false);
-</script>
+<!-- Buzzify Tool End -->
+
 <meta name="google-site-verification" content="Fmzp7MinEaZVTJ5XBTAAhZOMu8c7ONKZiMY2eQzJwv8" />
 <!-- AdSIST Tool End -->
   <title>Test page</title>
